# topic_communication_with_ps4controller

./: .gitignore
install/: local_setup.sh  setup.sh
install/hello/lib/hello/: listener  listener_robo1  listener_robo2-1  listener_robo2-2  talker  talker_iseki  talker_nari
install/hello/share/hello/: package.sh  package.xml
install/hello_interfaces/include/hello_interfaces/hello_interfaces/msg/: my_string.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h
install/hello_interfaces/share/hello_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hello_interfaces/share/hello_interfaces/cmake/: export_hello_interfaces__rosidl_generator_cppExport.cmake  export_hello_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_hello_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_hello_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  hello_interfacesConfig.cmake  hello_interfaces__rosidl_typesupport_cExport.cmake  hello_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  hello_interfaces__rosidl_typesupport_cppExport.cmake  hello_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/hello_interfaces/share/hello_interfaces/msg/: MyString.idl
log/: latest_build
src/hello/: setup.py
src/hello/hello/: listener.py  listener_ID2.py  listener_ID3.py  talker.py
src/hello_interfaces/: CMakeLists.txt
(+11 files in other folders)
